src/test/ui/span/multiline-span-E0072.stderr
error[E0072]: recursive type `ListNode` has infinite size
  --> $DIR/multiline-span-E0072.rs:2:1
   |
LL | / struct
LL | | ListNode
LL | | {
LL | |     head: u8,
LL | |     tail: Option<ListNode>,
   | |     ---------------------- recursive without indirection
LL | | }
   | |_^ recursive type has infinite size
   |
   = help: insert indirection (e.g., a `Box`, `Rc`, or `&`) at some point to make `ListNode` representable

error: aborting due to previous error

For more information about this error, try `rustc --explain E0072`.
